tests/snapshots/cli__list_format_invalid_value_rejected_at_parse_time.snap
---
source: tests/cli.rs
assertion_line: 103
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/root.flake.nix"
    - list
    - "--format"
    - toml
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: invalid value 'toml' for '--format <FORMAT>'
  [possible values: simple, toplevel, detailed, json]

  tip: a similar value exists: 'toplevel'

For more information, try '--help'.
