tests/snapshots/cli__pin_with_lock_file@let_wrapped.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/let_wrapped.flake.nix"
    - "--lock-file"
    - "[FIXTURES]/let_wrapped.flake.lock"
    - "--diff"
    - pin
    - nixpkgs
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -1,6 +1,6 @@
 let
   system = "x86_64-linux";
 in {
-  inputs.nixpkgs.url = "github:nixos/nixpkgs";
+  inputs.nixpkgs.url = "github:nixos/nixpkgs/81e8f48ebdecf07aab321182011b067aafc78896";
   outputs = { self, nixpkgs }: { };
 }

----- stderr -----
