tests/snapshots/cli__remove@comments_before_brace_nixpkgs.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/comments_before_brace.flake.nix"
    - "--diff"
    - rm
    - nixpkgs
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -4,6 +4,5 @@

 {
   description = "A flake with comments before the opening brace";
-  inputs.nixpkgs.url = "github:NixOS/nixpkgs/nixos-unstable";
   outputs = _: { };
 }

----- stderr -----
