tests/snapshots/cli__remove@completely_flat_toplevel_alt_nixpkgs.snap
---
source: tests/cli.rs
assertion_line: 127
info:
  program: flake-edit
  args:
    - "--flake"
    - /home/kenji/dev/flake-edit/tests/fixtures/completely_flat_toplevel_alt.flake.nix
    - "--diff"
    - rm
    - nixpkgs
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -2,7 +2,6 @@
   description = "Edit your flake inputs with ease";

   inputs = {
-    nixpkgs.url = "github:nixos/nixpkgs/nixos-unstable";
     flake-utelinos.url = "github:numtide/flake-utils";
     rust-overlay.inputs.nixpkgs.follows = "nixpkgs";
     rust-overlay.url = "github:oxalica/rust-overlay";

----- stderr -----
