tests/snapshots/cli__remove@first_nested_node_nixpkgs.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/first_nested_node.flake.nix"
    - "--diff"
    - rm
    - nixpkgs
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -4,9 +4,7 @@
   inputs = {
     naersk = {
       url = "github:nix-community/naersk/master";
-      inputs.nixpkgs.follows = "nixpkgs";
     };
-    nixpkgs.url = "github:NixOS/nixpkgs/nixpkgs-unstable";
     utils.url = "github:numtide/flake-utils";
     flake-compat = {
       url = "github:edolstra/flake-compat";
@@ -17,7 +15,6 @@
   outputs =
     {
       self,
-      nixpkgs,
       utils,
       naersk,
       flake-compat,

----- stderr -----
