tests/snapshots/cli__remove@flat_nested_flat_nixpkgs.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/flat_nested_flat.flake.nix"
    - "--diff"
    - rm
    - nixpkgs
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -1,11 +1,8 @@
 {
   description = "flat nested flat test";
-
-  inputs.nixpkgs.url = "github:NixOS/nixpkgs/nixos-unstable";
   inputs.flake-utils.url = "github:numtide/flake-utils/master";
   inputs.poetry2nix = {
     inputs.flake-utils.follows = "flake-utils";
-    inputs.nixpkgs.follows = "nixpkgs";
     url = "github:nix-community/poetry2nix/master";
   };

@@ -12,7 +9,6 @@
   outputs =
     {
       self,
-      nixpkgs,
       flake-utils,
       poetry2nix,
     }:

----- stderr -----
